--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en" style="scroll-behavior: smooth;">
   <head>
     <meta charset="utf-8" />
+    <title>SibInvest Doo - Gradjevinska kompanija u Nisu</title>
+    <meta name="keywords" content="gradjevinarstvo, gradjevinska firma Nis,
+      gradjevinarstvo nis, sibinvest, sibinvest doo, gradjevinski radovi,
+      gradjevinski radovi nis">
+    <meta name="description" content="Naša kompanija je specijalizovana za
+      izvođenje najrazličitijih radova u oblasti građevinarstva. Sa sedištem u
+      Nišu, beležimo postojanje od 2008. godine, dok je prvi objekat- stambena
+      zgrada u ulici Stojana Novakovića u Nišu, izveden 2009. godine. Ono čime
+      se ponosimo su efkasnost, kvalitet gradnje, iskustvo i poslovan uspeh na
+      čitavoj teritoriji južne i jugoistočne Srbije. Takođe nas odlikuje
+      posvećenost i istrajnost, kao i dobri odnosi sa klijentima i saradnicima">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sibinvest</title>
   </head>
   <body id="body-wrapper">
     <div id="app"></div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
